--- a/SES7/SES7-bootstrap.yaml
+++ b/SES7/SES7-bootstrap.yaml
@@ -97,7 +97,37 @@
         state: present
     - zypper:
         name: hostname
-        state: present                        
+        state: present
+    - zypper:
+        name: systemd
+        state: present
+    - zypper:
+        name: systemd-sysvinit
+        state: present
+    - zypper:
+        name: udev
+        state: present
+    - zypper:
+        name: libudev1
+        state: present
+    - zypper:
+        name: systemd-coredump
+        state: present
+    - zypper:
+        name: ca-certificates-suse
+        state: present
+    - zypper:
+        name: supportutils
+        state: present
+    - zypper:
+        name: rbd-nbd
+        state: present
+    - zypper:
+        name: rsync
+        state: present
+    - zypper:
+        name: nfs-client
+        state: present
 
 - name: host file update - Local DNS setup across all the servers
   hosts: all
@@ -109,8 +139,8 @@
       become_user: root
       lineinfile:
         path: "/etc/hosts"
-        regexp: ".*\t{{ hostvars[item]['ansible_hostname']}}\t{{ hostvars[item]['ansible_hostname']}}"
-        line: "{{ hostvars[item]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}\t{{ hostvars[item]['ansible_hostname']}}\t{{ hostvars[item]['ansible_hostname']}}"
+        regexp: ".*\t{{ hostvars[item]['ansible_fqdn']}}\t{{ hostvars[item]['ansible_hostname']}}"
+        line: "{{ hostvars[item]['ansible_eth2'].ipv4.address }}\t{{ hostvars[item]['ansible_fqdn']}}\t{{ hostvars[item]['ansible_hostname']}}"
         state: present
         backup: yes
       register: etchostsupdate
