--- a/SES7/nfs.yaml
+++ b/SES7/nfs.yaml
@@ -2,7 +2,8 @@ service_type: nfs
 service_id: sesdev_nfs
 placement:
  hosts:
- - osd-1
- - osd-2
+  - osd-2
+  - osd-3
+  - osd-4
 spec:
-  pool: sesdev_nfs_ganesha_rados
+  pool: sesdev_nfs_ganesha
