--- a/SES7/nfs_export.cfg
+++ b/SES7/nfs_export.cfg
@@ -1,12 +1,13 @@
 EXPORT {
     export_id = 1;
     path = "/";
-    pseudo = "/";
+    pseudo = "/test";
     access_type = "RW";
     squash = "no_root_squash";
-    protocols = 3, 4;
+    protocols = 4;
     transports = "TCP", "UDP";
     FSAL {
-        name = "sd_fs";
-    }
+        Name = CEPH;
+        Filesystem = "sesdev_fs";
+  }
 }
