--- a/SES6/SES6-salt-config.yaml
+++ b/SES6/SES6-salt-config.yaml
@@ -2,18 +2,43 @@
   hosts: admins
   become: true
   tasks:
-    - name: salt [0,1]
+    - name: salt [prep, discovery]
       shell: |
-        sleep 5
+        sleep 10
         salt '*' grains.append deepsea default
         sleep 5
+        
         cat > /srv/pillar/ceph/stack/global.yml << EOF
         time_server: pool.ntp.org
         EOF
+
         salt '*' saltutil.pillar_refresh
         salt '*' state.apply ceph.time
-        salt-run state.orch ceph.stage.prep
-        salt-run state.orch ceph.stage.discovery
+        deepsea stage run --simple-output ceph.stage.prep
+        deepsea stage run --simple-output ceph.stage.discovery
       register: salt_01
     - debug:
         var: salt_01.stdout_lines
+
+    - name: salt [configure, deploy]
+      shell: |
+        mkdir -p /srv/pillar/ceph/proposals
+        cat > /srv/pillar/ceph/proposals/policy.cfg << EOF
+        cluster-ceph/cluster/*.sls
+        config/stack/default/global.yml
+        config/stack/default/ceph/cluster.yml
+        role-admin/cluster/*.sls
+        role-master/cluster/admin*.sls
+        role-prometheus/cluster/admin*.sls
+        role-grafana/cluster/admin*.sls
+        role-storage/cluster/osd-*.sls
+        role-mon/cluster/osd-*.sls
+        role-mgr/cluster/osd-*.sls
+        role-mds/cluster/osd-*.sls
+        EOF
+        deepsea stage run --simple-output ceph.stage.configure
+        deepsea stage run --simple-output ceph.stage.deploy
+        ceph config set mon auth_allow_insecure_global_id_reclaim false
+      register: salt_23
+    - debug:
+        var: salt_23.stdout_lines
