--- a/SES7P/SES7P-bootstrap.yaml
+++ b/SES7P/SES7P-bootstrap.yaml
@@ -1,58 +1,60 @@
-- name: CEPHADM-ADD-REPOS-ALL
+- name: SES7P-ADD-REPOS-ALL
   hosts: all
   become: true
   tasks:
     - zypper_repository:
-        repo: 'http://download.nue.suse.com/ibs/SUSE:/CA/SLE_15_SP2/SUSE:CA.repo'
+        repo: 'http://download.suse.de/ibs/SUSE:/CA/SLE_15_SP3/SUSE:CA.repo'
       ignore_errors: yes
     - zypper_repository:
         name: product
-        repo: 'http://dist.suse.de/ibs/SUSE/Products/SLE-Product-SLES/15-SP2/x86_64/product/'
+        repo: 'http://dist.suse.de/ibs/SUSE/Products/SLE-Product-SLES/15-SP3/x86_64/product/'
         state: present
         auto_import_keys: yes
     - zypper_repository:
         name: product-update
-        repo: 'http://dist.suse.de/ibs/SUSE/Updates/SLE-Product-SLES/15-SP2/x86_64/update/'
+        repo: 'http://dist.suse.de/ibs/SUSE/Updates/SLE-Product-SLES/15-SP3/x86_64/update/'
         state: present
         auto_import_keys: yes
     - zypper_repository:
         name: base
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Products/SLE-Module-Basesystem/15-SP2/x86_64/product/'
+        repo: 'http://download.nue.suse.com/ibs/SUSE/Products/SLE-Module-Basesystem/15-SP3/x86_64/product/'
         state: present
         auto_import_keys: yes
     - zypper_repository:
         name: update
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Updates/SLE-Module-Basesystem/15-SP2/x86_64/update/'
+        repo: 'http://download.nue.suse.com/ibs/SUSE/Updates/SLE-Module-Basesystem/15-SP3/x86_64/update/'
         state: present
         auto_import_keys: yes
     - zypper_repository:
         name: server-apps
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Products/SLE-Module-Server-Applications/15-SP2/x86_64/product/'
+        repo: 'http://download.nue.suse.com/ibs/SUSE/Products/SLE-Module-Server-Applications/15-SP3/x86_64/product/'
         state: present
         auto_import_keys: yes
     - zypper_repository:
         name: server-apps-update
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Updates/SLE-Module-Server-Applications/15-SP2/x86_64/update/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        name: storage
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Products/Storage/7/x86_64/product/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        name: storage-update
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Updates/Storage/7/x86_64/update/'
+        repo: 'http://download.nue.suse.com/ibs/SUSE/Updates/SLE-Module-Server-Applications/15-SP3/x86_64/update/'
         state: present
         auto_import_keys: yes
     - zypper_repository:
         repo: '*'
         runrefresh: yes
+    - name: adding devel storage repo and dist-upgrade
+      shell: |
+        zypper --non-interactive ar --refresh http://download.nue.suse.com/ibs/Devel:/Storage:/7.0:/Pacific/images/repo/SUSE-Enterprise-Storage-7-POOL-x86_64-Media1/ devel-repo-1
+        zypper --non-interactive --gpg-auto-import-keys ref
+        zypper --non-interactive dup --allow-vendor-change -y
+      register: shell_output
+    - debug:
+        var: shell_output.stdout_lines
 
-- name: CEPHADM-INSTALL-PKGS-ALL
+- name: SES7P-INSTALL-PKGS-ALL
   hosts: all
   become: true
   tasks:
+    - name: Update all packages
+      zypper:
+        name: '*'
+        state: latest      
     - zypper:
         name: vim
         state: present
@@ -128,9 +130,6 @@
     - zypper:
         name: nfs-client
         state: present
-    - zypper:
-        name: podman
-        state: present
 
 - name: host file update - Local DNS setup across all the servers
   hosts: all
@@ -149,8 +148,12 @@
       register: etchostsupdate
       when: ansible_hostname != "{{ item }}" or ansible_hostname == "{{ item }}"
       with_items: "{{groups['all']}}"
+    - name: Patch the /etc/hosts 
+      become: true
+      shell: | 
+        sed -i s/"127.0.1.1 {{ ansible_facts['fqdn']}} {{ ansible_facts['hostname']}}"/""/ /etc/hosts
 
-- name: CEPHADM-SSH-KEYS-ALL
+- name: SES7P-SSH-KEYS-ALL
   hosts: all
   become: true
   tasks:
@@ -167,13 +170,3 @@
             Host *
             StrictHostKeyChecking no
             EOF
-
-- name: CEPHADM-ensure-chronyd
-  hosts: all
-  become: true
-  tasks:
-    - name: Enable/Start chronyd
-      systemd:
-        name: chronyd
-        state: started
-        enabled: yes
