--- a/SES7P/SES7P-bootstrap.yaml
+++ b/SES7P/SES7P-bootstrap.yaml
@@ -40,7 +40,7 @@
         runrefresh: yes
     - name: adding devel storage repo and dist-upgrade
       shell: |
-        zypper --non-interactive ar --refresh http://download.nue.suse.com/ibs/Devel:/Storage:/7.0:/Pacific/images/repo/SUSE-Enterprise-Storage-7-POOL-x86_64-Media1/ devel-repo-1
+        zypper --non-interactive ar --refresh http://download.suse.de/ibs/SUSE:/SLE-15-SP3:/Update:/Products:/SES7/images/repo/SUSE-Enterprise-Storage-7.1-POOL-x86_64-Media1/ devel-repo-1
         zypper --non-interactive --gpg-auto-import-keys ref
         zypper --non-interactive dup --allow-vendor-change -y
       register: shell_output
