--- a/SES7to7P/cluster.yaml
+++ b/SES7to7P/cluster.yaml
@@ -32,3 +32,36 @@ spec:
     all: true
   filter_logic: AND
   objectstore: bluestore
+---
+service_type: prometheus
+service_id: prometheus
+placement:
+    hosts:
+        - admin
+---
+service_type: grafana
+service_id: grafana
+placement:
+    hosts:
+        - admin
+---
+service_type: alertmanager
+service_id: alertmanager
+placement:
+    hosts:
+        - admin
+---
+service_type: node-exporter
+service_id: node-exporter
+placement:
+    hosts:
+        - admin
+---
+service_type: mds
+service_id: mds
+placement:
+ hosts:
+  - osd-1
+  - osd-2
+  - osd-3
+  - osd-4
