--- a/SES7P_multisite/SES7P-bootstrap.yaml
+++ b/SES7P_multisite/SES7P-bootstrap.yaml
@@ -2,48 +2,11 @@
   hosts: all
   become: true
   tasks:
-    - zypper_repository:
-        repo: 'http://download.suse.de/ibs/SUSE:/CA/SLE_15_SP3/SUSE:CA.repo'
-      ignore_errors: yes
-    - zypper_repository:
-        name: product
-        repo: 'http://dist.suse.de/ibs/SUSE/Products/SLE-Product-SLES/15-SP3/x86_64/product/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        name: product-update
-        repo: 'http://dist.suse.de/ibs/SUSE/Updates/SLE-Product-SLES/15-SP3/x86_64/update/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        name: base
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Products/SLE-Module-Basesystem/15-SP3/x86_64/product/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        name: update
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Updates/SLE-Module-Basesystem/15-SP3/x86_64/update/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        name: server-apps
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Products/SLE-Module-Server-Applications/15-SP3/x86_64/product/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        name: server-apps-update
-        repo: 'http://download.nue.suse.com/ibs/SUSE/Updates/SLE-Module-Server-Applications/15-SP3/x86_64/update/'
-        state: present
-        auto_import_keys: yes
-    - zypper_repository:
-        repo: '*'
-        runrefresh: yes
     - name: adding devel storage repo and dist-upgrade
       shell: |
-        zypper --non-interactive ar --refresh http://download.suse.de/ibs/SUSE:/SLE-15-SP3:/Update:/Products:/SES7/images/repo/SUSE-Enterprise-Storage-7.1-POOL-x86_64-Media1/ devel-repo-1
-        zypper --non-interactive ar --refresh http://download.suse.de/ibs/Devel:/Storage:/7.0:/Pacific/SLE_15_SP3/ devel-repo-2
+        zypper --non-interactive ar --refresh https://download.opensuse.org/repositories/filesystems:/ceph:/pacific/openSUSE_Leap_15.3 devel-repo-1
         zypper --non-interactive --gpg-auto-import-keys ref
-        zypper --non-interactive dup --allow-vendor-change -y
+        zypper dist-upgrade --allow-vendor-change --auto-agree-with-licenses --from=devel-repo-1 --no-confirm
       register: shell_output
     - debug:
         var: shell_output.stdout_lines
@@ -56,6 +19,9 @@
       zypper:
         name: '*'
         state: latest
+    - zypper:
+        name: podman
+        state: present
     - zypper:
         name: vim
         state: present
@@ -117,13 +83,7 @@
         name: systemd-coredump
         state: present
     - zypper:
-        name: ca-certificates-suse
-        state: present
-    - zypper:
         name: supportutils
-        state: present
-    - zypper:
-        name: rbd-nbd
         state: present
     - zypper:
         name: rsync
@@ -171,3 +131,15 @@
             Host *
             StrictHostKeyChecking no
             EOF
+
+- name: SES7P-REBOOT
+  hosts: all
+  become: true
+  tasks:
+    - name: Reboot host and wait for it to restart
+      reboot:
+        msg: "Reboot initiated by Ansible"
+        connect_timeout: 5
+        reboot_timeout: 600
+        pre_reboot_delay: 0
+        post_reboot_delay: 30
